# extractor

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  GEDP_FIELDS.xlsx  INSTALL.md  README.md  SEARCH_REVAMP_PLAN.md  Start PV Extractor.bat  aliases.yaml  ares_index.xlsx  config.example.yaml  pyproject.toml  rules.yaml  setup.bat
.claude/: settings.local.json
.claude/workflows/: pv-extractor-phase1-review.js
config/: models.yaml
docs/: AUDIT_REPORT.md
reference/: master_index_v4.xlsx  strip_from_index.xlsx
schema/: band_routing.json  master_schema.json
scripts/: benchmark_llm_plan.py  bootstrap.ps1  bootstrap.py  diagnose_extraction.py  setup.ps1  setup.sh  sync_to_windows.sh
src/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/pv_extractor/: __init__.py  cli.py  config.py  evidence.py  io_guard.py  logging_setup.py  models.py  normalize.py  run.py
tests/: conftest.py  test_bands.py  test_codex_cli_client.py  test_config.py  test_deal_discovery.py  test_deal_learning.py  test_dynamic_reference.py  test_escalation_plan.py  test_evidence_resolution.py  test_finalization.py  test_golden_extraction.py  test_gui_api.py  test_gui_smoke.py  test_hl_gedp_profile.py  test_indexer.py  test_job_manager.py  test_llm_arbitration.py  test_llm_client.py  test_llm_escalation.py  test_llm_file_output.py  test_llm_live.py  test_llm_planner.py  test_llm_registry.py  test_llm_schema_builder.py  test_llm_single_call_collapse.py  test_locator_e2e.py  test_locator_overrides.py  test_locator_unit.py  test_multi_search.py  test_multidoc_merge.py  test_patterns.py  test_perf_smoke.py  test_periods.py  test_readers.py  test_readonly_guard.py  test_schema_compiler.py  test_scratch_cleanup.py  test_smart_search.py  test_system_checks.py  test_targeting.py  (+3 more)
tests/fixtures/: build_fixture.py  (+3 more)
(+136 files in other folders)
